--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,9 @@ name: CI/CD Pipeline
 on:
   pull_request:
     branches:
-      - develop        # PR to develop
-      - master         # PR to master (from release/*)
-      - main           # PR to main (from release/*)
+      - develop # PR to develop
+      - master # PR to master (from release/*)
+      - main # PR to main (from release/*)
 
 permissions:
   contents: read
@@ -21,8 +21,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: "20"
+          cache: "npm"
 
       - name: Install dependencies
         run: npm ci
@@ -30,27 +30,11 @@ jobs:
       - name: Run linter
         run: npm run lint
 
-      - name: Run unit tests
-        run: npm run test:ci
-
       - name: Build project
         run: npm run build
 
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        if: success()
-        with:
-          name: build-${{ github.event.pull_request.number }}
-          path: .next/
-          retention-days: 7
-
-      - name: Upload test coverage
-        uses: actions/upload-artifact@v4
-        if: success()
-        with:
-          name: coverage-${{ github.event.pull_request.number }}
-          path: coverage/
-          retention-days: 7
+      - name: Run unit tests
+        run: npm run test:ci
 
       - name: Comment PR with success
         if: success()
