--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "prepare": "husky",
     "dev": "husky install && next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "npm run lint && next build --turbopack",
     "start": "next start",
     "lint": "eslint --quiet",
     "lint:fix": "eslint --fix && prettier --write .",
