test(test): trigger auto pr workflow

--- a/.github/workflows/version-bump-production.yml
+++ b/.github/workflows/version-bump-production.yml
@@ -29,6 +29,18 @@ jobs:
         with:
           node-version: '20'
 
+      - name: Get current version and commit before changes
+        id: version-info
+        run: |
+          CURRENT_VERSION=$(node -p "require('./package.json').version")
+          echo "current_version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
+          echo "Current version: $CURRENT_VERSION"
+          
+          # Store the commit hash before any changes
+          COMMIT_BEFORE_CHANGES=$(git rev-parse HEAD)
+          echo "commit_before_changes=$COMMIT_BEFORE_CHANGES" >> $GITHUB_OUTPUT
+          echo "Commit before changes: $COMMIT_BEFORE_CHANGES"
+
       - name: Determine version bump type
         id: bump-type
         env:
@@ -48,13 +60,6 @@ jobs:
             echo "🟢 PATCH version bump (default)"
           fi
 
-      - name: Get current version
-        id: current-version
-        run: |
-          CURRENT_VERSION=$(node -p "require('./package.json').version")
-          echo "version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
-          echo "Current version: $CURRENT_VERSION"
-
       - name: Bump version
         id: new-version
         run: |
@@ -67,6 +72,44 @@ jobs:
           NEW_VERSION=$(node -p "require('./package.json').version")
           echo "version=$NEW_VERSION" >> $GITHUB_OUTPUT
           echo "New version: $NEW_VERSION"
+
+      - name: Get commit after version bump but before commit
+        id: commit-after-bump
+        run: |
+          # Get the commit hash after version bump but before committing
+          COMMIT_AFTER_BUMP=$(git rev-parse HEAD)
+          echo "commit_after_bump=$COMMIT_AFTER_BUMP" >> $GITHUB_OUTPUT
+          echo "Commit after version bump: $COMMIT_AFTER_BUMP"
+
+      - name: Generate changelog (before final commit)
+        id: changelog
+        env:
+          GH_TOKEN: ${{ github.token }}
+          OLD_VERSION: ${{ steps.version-info.outputs.current_version }}
+          NEW_VERSION: ${{ steps.new-version.outputs.version }}
+        run: |
+          # Check if the old version tag exists
+          if git rev-parse "v$OLD_VERSION" >/dev/null 2>&1; then
+            # If the old tag exists, get commits between old tag and commit before version bump
+            COMMITS=$(git log --pretty=format:"- %s (%h)" "v$OLD_VERSION..${{ steps.version-info.outputs.commit_before_changes }}")
+          else
+            # If the old tag doesn't exist (first release), get all commits up to the current state before version bump
+            COMMITS=$(git log --pretty=format:"- %s (%h)" ${{ steps.version-info.outputs.commit_before_changes }})
+            echo "⚠️ Previous tag v$OLD_VERSION not found. Including all commits up to this point."
+          fi
+
+          # Create changelog
+          cat > CHANGELOG.md << EOF
+          ## What's Changed
+
+          $COMMITS
+
+          **Full Changelog**: https://github.com/${{ github.repository }}/compare/v$OLD_VERSION...v$NEW_VERSION
+          EOF
+
+          echo "changelog<<EOF" >> $GITHUB_OUTPUT
+          cat CHANGELOG.md >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Commit version bump
         env:
@@ -85,29 +128,6 @@ jobs:
         run: |
           git tag -a "v$NEW_VERSION" -m "Release v$NEW_VERSION"
           git push origin "v$NEW_VERSION"
-
-      - name: Generate changelog
-        id: changelog
-        env:
-          GH_TOKEN: ${{ github.token }}
-          NEW_VERSION: ${{ steps.new-version.outputs.version }}
-          OLD_VERSION: ${{ steps.current-version.outputs.version }}
-        run: |
-          # Get commits between versions
-          COMMITS=$(git log --pretty=format:"- %s (%h)" v$OLD_VERSION..HEAD)
-
-          # Create changelog
-          cat > CHANGELOG.md << EOF
-          ## What's Changed
-
-          $COMMITS
-
-          **Full Changelog**: https://github.com/${{ github.repository }}/compare/v$OLD_VERSION...v$NEW_VERSION
-          EOF
-
-          echo "changelog<<EOF" >> $GITHUB_OUTPUT
-          cat CHANGELOG.md >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Create GitHub Release
         env:
@@ -138,7 +158,7 @@ jobs:
 
       - name: Summary
         env:
-          OLD_VERSION: ${{ steps.current-version.outputs.version }}
+          OLD_VERSION: ${{ steps.version-info.outputs.current_version }}
           NEW_VERSION: ${{ steps.new-version.outputs.version }}
           BUMP_TYPE: ${{ steps.bump-type.outputs.bump_type }}
         run: |
